--- a/projeto.html
+++ b/projeto.html
@@ -50,15 +50,46 @@
             dolores saepe repellendus facilis totam animi dolor at ab libero? Recusandae?</p>
         </div>
         <div class="div-paragrafo">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, voluptate. Minima dolore ullam temporibus tenetur mollitia, error odit nemo perferendis ducimus expedita sapiente nulla voluptatem illum dolor vel! Ea, ipsum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, voluptate. Minima dolore ullam
+                temporibus tenetur mollitia, error odit nemo perferendis ducimus expedita sapiente nulla voluptatem
+                illum dolor vel! Ea, ipsum.</p>
 
         </div>
 
-       <section class="section-03">
+        <section class="section-03">
 
-         <button>cadastre-se</button>
-         
-       </section>
+            <button>cadastre-se</button>
+
+        </section>
+
+
+    </section>
+
+    <section class="section-04">
+        <!-- primeira ciaxa -->
+        <div class="div-section-04 div-star ">
+            <h3>Titulo da caixa </h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Tenetur asperiores deserunt vel placeat autem,
+                nam reprehenderit explicabo nemo alias<br>
+                <i class="fa-brands fa-web-awesome"></i>
+                <i class="fa-brands fa-web-awesome"></i>
+                <i class="fa-brands fa-web-awesome"></i>
+                <i class="fa-brands fa-web-awesome"></i>
+            </p>
+        </div>
+        <!-- segunda caixa  -->
+        <div class="div-section-04 div-dog"></div>
+
+        <!-- terceira caixa  -->
+        <div class="div-section-04 div-user">
+            <img src="imagem/github_git_hub_logo_icon_132878.ico" alt="git hub">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Iste quibusdam accusamus expedita, suscipit
+                consequatur minima, quas magni voluptatem
+                
+            </p>
+        </div>
 
 
     </section>
