--- a/projeto.html
+++ b/projeto.html
@@ -93,6 +93,15 @@
 
 
     </section>
+    <footer class="footer">
+        <div>
+            <p>TODOS DIREITOS RESERVADOS</p>
+            <p>2025₢Copy</p>
+           <i class="fa-brands fa-github"></i>
+           <i class="fa-brands fa-facebook"></i>
+           <i class="fa-brands fa-discord"></i>
+        </div>
+    </footer>
 
 
 </body>
